--- a/Web/Web.css
+++ b/Web/Web.css
@@ -1,23 +1,99 @@
-.title {
-    margin-top: 10%;
-    margin-left: 49%;
-    background-color: blue;
-    height: 50px;
-    width: 50px;
+nav {
+    border-bottom: 1px solid black;
 }
 
-.resume {
-    width: 80%;
-    height: 600px;
-    background-color: aqua;
-    margin-left: auto;
-    margin-right: auto;
+.container {
+    text-align: center;
+}
+ 
+.back{
+  background-color: rgb(239, 225, 215);
 }
 
-.portfolio {
-    width: 80%;
-    height: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: brown;
+.asd{
+  float: right;
 }
+
+.par{
+  float: right;
+}
+
+h1 {
+    font-size: xx-large;
+    color: rgb(0, 0, 0);
+}
+
+h2 {
+  font-size: xx-large;
+  color: rgb(0, 0, 0);
+}
+
+h3{
+    margin-right: 50%; 
+    font-size: x-large;
+}
+
+h4{
+    font-size: x-large;
+}
+
+h5{
+    font-size: x-large;
+    margin-bottom: 5%;
+}
+
+h6{
+    font-size: x-large;
+}
+
+html {
+    padding: 20px;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+ 
+table, th, td {
+  border:1px solid rgb(0, 0, 0);
+  width:20%;
+}
+
+.row {
+  font-size: 0;
+}
+.row > .col {
+  font-size: 1rem;
+  display: inline-table;
+  vertical-align: top;
+  width: 33.33%;
+  padding: 1%;
+  border-left: 1% solid #000;
+}
+.row > .col:last-child {
+  border-right: 1% solid #000;
+}
+
+.cont{
+    margin: auto;
+    width: 40%;
+    border: 3px solid #000000;
+    padding: 0.3%;
+    background-color: rgb(239, 225, 215);
+}
+
+.name2{
+    font-size: x-large;
+}
+
+.highlight{
+    display: inline-block;
+    padding: .25em 0;
+    background: #FFC107;
+    color: #ffffff;
+}
+
+.pad{
+  padding-bottom: 1%;
+}
+
