--- a/Web/Web.css
+++ b/Web/Web.css
@@ -1,99 +1,52 @@
-nav {
-    border-bottom: 1px solid black;
+.icon {
+  width: 50px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: brown;
 }
 
-.container {
-    text-align: center;
-}
- 
-.back{
-  background-color: rgb(239, 225, 215);
-}
-
-.asd{
-  float: right;
+.cv {
+  height: 600px;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: brown;
 }
 
-.par{
-  float: right;
+.portfolio {
+  height: 600px;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: brown;
+  margin-top: 0%;
 }
 
-h1 {
-    font-size: xx-large;
-    color: rgb(0, 0, 0);
+.line {
+  margin-top: 10px;
 }
 
-h2 {
-  font-size: xx-large;
-  color: rgb(0, 0, 0);
+.footer {
+  width: 85%;
+  height: 50px;
+  background-color: brown;
+  margin-left: auto;
+  margin-right: auto;
+}
+body {
+  background-color: rgb(34, 33, 48)
 }
 
-h3{
-    margin-right: 50%; 
-    font-size: x-large;
+hr {
+  height: 20px;
+  background-color:rgb(0,0,0)
 }
 
-h4{
-    font-size: x-large;
+.icon , .portfolio , .footer , .cv {
+  background-color: rgb(47,45,65);
 }
 
-h5{
-    font-size: x-large;
-    margin-bottom: 5%;
+p {
+  color: blanchedalmond;
 }
-
-h6{
-    font-size: x-large;
-}
-
-html {
-    padding: 20px;
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
- 
-table, th, td {
-  border:1px solid rgb(0, 0, 0);
-  width:20%;
-}
-
-.row {
-  font-size: 0;
-}
-.row > .col {
-  font-size: 1rem;
-  display: inline-table;
-  vertical-align: top;
-  width: 33.33%;
-  padding: 1%;
-  border-left: 1% solid #000;
-}
-.row > .col:last-child {
-  border-right: 1% solid #000;
-}
-
-.cont{
-    margin: auto;
-    width: 40%;
-    border: 3px solid #000000;
-    padding: 0.3%;
-    background-color: rgb(239, 225, 215);
-}
-
-.name2{
-    font-size: x-large;
-}
-
-.highlight{
-    display: inline-block;
-    padding: .25em 0;
-    background: #FFC107;
-    color: #ffffff;
-}
-
-.pad{
-  padding-bottom: 1%;
-}
-
