--- a/Web/Web.css
+++ b/Web/Web.css
@@ -1,17 +1,21 @@
 .icon {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   margin-left: auto;
   margin-right: auto;
-  background-color: brown;
+  margin-top: 30px;
+  margin-bottom: 0%;
 }
 
 .cv {
-  height: 600px;
-  width: 450px;
+  height: 700px;
+  width: 500px;
   margin-left: auto;
   margin-right: auto;
-  background-color: brown;
+  background-image: url(frame.png);
+  background-size: cover;
+  position: relative;
+  text-align: center;
 }
 
 .portfolio {
@@ -19,7 +23,6 @@
   width: 700px;
   margin-left: auto;
   margin-right: auto;
-  background-color: brown;
   margin-top: 0%;
 }
 
@@ -30,7 +33,6 @@
 .footer {
   width: 85%;
   height: 50px;
-  background-color: brown;
   margin-left: auto;
   margin-right: auto;
 }
@@ -39,14 +41,22 @@ body {
 }
 
 hr {
-  height: 20px;
+  height: 15px;
   background-color:rgb(0,0,0)
 }
 
-.icon , .portfolio , .footer , .cv {
+.portfolio , .footer , .cv {
   background-color: rgb(47,45,65);
 }
 
 p {
   color: blanchedalmond;
+  display: inline-block;
+}
+
+#pp {
+  height: 75px;
+  width: 75px;
+  border-radius: 50%;
+  margin-top: 25px;
 }
