--- a/React/contactlist/src/index.css
+++ b/React/contactlist/src/index.css
@@ -1,4 +1,27 @@
 .menu {
-    margin-left: 46%;
-    margin-top: 5%;
+    margin-top: 15%;
+    margin-bottom: none;
+    height: 30px;
+    text-align: center;
+    padding-bottom: none;
+    padding-top: 20px;
+}
+
+.textfield {
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 3%;
+}
+
+.buttons{
+    text-align: center;
+    margin-top: 30px;
+    padding-bottom: 20px;
+}
+
+.holder {
+    width: 70%;
+    background-color: rgb(237, 175, 162);
+    margin: auto;
+    border-radius: 50px;
 }
