--- a/React/contactlist/src/index.css
+++ b/React/contactlist/src/index.css
@@ -17,11 +17,14 @@
     text-align: center;
     margin-top: 30px;
     padding-bottom: 20px;
+    background-color: rgb(249, 208, 178);
+    border-radius: 50px;
+    padding-top: 15px;
 }
 
 .holder {
     width: 60%;
-    background-color: rgb(237, 175, 162);
+    background-color: rgb(228, 156, 156);
     margin: auto;
     border-radius: 50px;
 }
